# gitctx

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  REFACTORING_CHANGELOG.md  STORY-0001.2.1-requirements.md  SUBAGENT_REFACTOR_PLAN.md  TUI_GUIDE.md  codecov.yml  conftest.py  pyproject.toml
.claude/: docs
.claude/agents/: AGENT_CONTRACT.md  README.md  design-guardian.md  discovery-orchestrator.md  git-state-analyzer.md  gitstory-command-prompt-improver.md  gitstory-design-guardian.md  gitstory-gap-analyzer.md  gitstory-git-state-analyzer.md  gitstory-pattern-discovery.md  gitstory-prompt-analyzer.md  gitstory-prompt-generator.md  gitstory-specification-quality-checker.md  gitstory-subagent-prompt-improver.md  gitstory-ticket-analyzer.md  pattern-discovery.md  requirements-interviewer.md  specification-quality-checker.md  ticket-analyzer.md
.claude/commands/: discover.md  gitstory  plan-epic.md  plan-initiative.md  plan-story.md  review-story.md  review-ticket.md  start-next-task.md  write-next-tickets.md
.github/workflows/: ci.yml  performance.yml  performance.yml.disabled  pr-checks.yml
.gitstory/agents/: gitstory-design-guardian.md  gitstory-pattern-discovery.md  gitstory-specification-quality-checker.md  gitstory-ticket-analyzer.md
.gitstory/commands/gitstory/: plan-story.md
.gitstory/docs/: TICKET_SPECIFICATION.md
docs/: CLAUDE.md  configuration.md
docs/architecture/: CLAUDE.md
docs/tickets/: CLAUDE.md
docs/tickets/INIT-0001/: README.md
docs/tickets/INIT-0002/: README.md
docs/tickets/INIT-0004/: README.md
docs/vision/: CLAUDE.md  ROADMAP.md  success-metrics.md
scripts/: benchmark_compression.py
src/gitctx/: __init__.py  __main__.py  exceptions.py
src/gitctx/cli/: __init__.py  clear.py  config.py  index.py  main.py  search.py  symbols.py  tips.py
src/gitctx/config/: errors.py  settings.py
src/gitctx/core/: __init__.py  blob_filter.py  chunker.py  commit_walker.py  config.py  embedding.py  embedding_cache.py  exceptions.py  language_detection.py  models.py  protocols.py  repo_config.py  user_config.py
src/gitctx/embeddings/: __init__.py  openai_embedder.py
src/gitctx/formatters/: __init__.py  base.py  mcp.py  terse.py  verbose.py
src/gitctx/git/: protocols.py  types.py  walker.py
src/gitctx/indexing/: __init__.py  blob_filter.py  chunker.py  embeddings.py  formatting.py  pipeline.py  progress.py  protocols.py  types.py
src/gitctx/models/: README.md  base.py  errors.py  factory.py  protocols.py  registry.py
src/gitctx/search/: README.md  embeddings.py  errors.py
src/gitctx/storage/: README.md  __init__.py  embedding_cache.py  lancedb_store.py  protocols.py  schema.py
tests/: __init__.py  conftest.py  sitecustomize.py
tests/e2e/: CLAUDE.md  __init__.py  conftest.py  test_chunking_features.py  test_commit_walker_features.py  test_embedding_features.py  test_features.py  test_fixtures.py  test_indexing_features.py  test_lancedb_storage_features.py  test_progress_tracking_features.py  test_search_features.py  test_search_integration.py  test_search_performance.py
tests/e2e/cassettes/: .gitignore  README.md  test_cached_query_embedding_reused_no_api_call.yaml  test_conflicting_output_flags_rejected.yaml  test_default_terse_output.yaml  test_default_terse_output_format.yaml  test_empty_query_validation_exit_code_2.yaml  test_empty_stdin_with_no_args_exit_code_2.yaml  test_full_pipeline_index_then_search.yaml  test_generate_embedding_for_single_chunk.yaml  test_head_commit_marked_with_symbol.yaml  test_invalid_result_limit_too_high_exit_code_2.yaml  test_invalid_result_limit_too_low_exit_code_2.yaml  test_mcp_output_with_structured_markdown.yaml  test_missing_api_key_exit_code_4.yaml  test_query_embedding_generated_successfully.yaml  test_query_exceeds_token_limit_exit_code_2.yaml  test_search_empty_result_set_exit_zero.yaml  test_search_from_stdin_pipeline.yaml  test_search_returns_results_sorted_by_similarity_score.yaml  test_search_with_flags_before_query_terms.yaml  test_search_with_no_results.yaml  test_search_with_result_limit.yaml  test_search_with_unquoted_multi_word_query.yaml  test_search_with_unquoted_multiword_query.yaml  test_track_api_costs_accurately.yaml  test_unknown_language_fallback_to_markdown.yaml  test_validate_embedding_dimensions.yaml  test_verbose_mode_with_phase_progress.yaml  test_verbose_output_with_syntax_highlighting.yaml  test_zero_results_display.yaml
tests/e2e/features/: chunking.feature  cli.feature  commit_walker.feature  embedding.feature  indexing.feature  lancedb_storage.feature  progress_tracking.feature  search.feature
tests/e2e/steps/: cli_steps.py  commit_walker_steps.py  indexing_steps.py  lancedb_storage_steps.py  progress_steps.py  search_steps.py  test_chunking.py  test_embedding.py  test_formatting_steps.py
tests/fixtures/: long_query_9000_tokens.txt
tests/unit/: CLAUDE.md  __init__.py  conftest.py  test_fixtures.py  test_package.py
tests/unit/cli/: test_clear.py  test_config.py  test_error_handling.py  test_index.py  test_search.py  test_search_args.py  test_search_formatting.py  test_search_integration.py  test_symbols.py  test_tips.py
tests/unit/config/: test_integration.py  test_repo_config.py  test_settings.py  test_user_config.py
tests/unit/core/: test_chunker.py  test_chunker_integration.py  test_commit_walker.py  test_commit_walker_edge_cases.py  test_commit_walker_performance.py  test_commit_walker_symlinks.py  test_config.py  test_deduplication.py  test_embedding.py  test_language_detection.py  test_location_tracking.py  test_models.py  test_repo_config.py  test_user_config.py
tests/unit/embeddings/: __init__.py  test_config_integration.py  test_embedding.py  test_embedding_cache.py  test_openai_embedder.py  test_protocol.py
tests/unit/formatters/: test_base.py  test_mcp.py  test_registry.py  test_terse.py  test_verbose.py
tests/unit/git/: __init__.py  test_protocols.py  test_types.py  test_walker.py  test_walker_performance.py
tests/unit/indexing/: test_chunker.py  test_chunker_integration.py  (+7 more)
(+133 files in other folders)
